Grid overflow issue

--- a/_spamjs-datatable.scss
+++ b/_spamjs-datatable.scss
@@ -1,5 +1,6 @@
 #gridContainer_wrapper {
     opacity: 0;
+    overflow: hidden;
     table.dt-rowReorder-float {
         position: absolute !important;
         opacity: 0.8;
